# smart-releaser-demo

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: action.yml
crates/myliba/: CHANGELOG.md  Cargo.toml
crates/myliba/src/: lib.rs
crates/mylibb/: CHANGELOG.md  Cargo.toml
crates/mylibb/src/: lib.rs
crates/mylibc/: CHANGELOG.md  Cargo.toml
crates/mylibc/src/: lib.rs
src/: main.rs
