[package]
name = "brooksmtownsend-smartrelease-demo-mybin"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "binary for testing of smart-release"

[workspace]
members = ["crates/myliba", "crates/mylibb", "crates/mylibc"]

[dependencies]
brooksmtownsend-smartrelease-demo-myliba = { workspace = true }
brooksmtownsend-smartrelease-demo-mylibb = { workspace = true }

[workspace.dependencies]

brooksmtownsend-smartrelease-demo-myliba = { version = "^0.2.0", path = "./crates/myliba" }
brooksmtownsend-smartrelease-demo-mylibb = { version = "^0.1.1", path = "./crates/mylibb" }
brooksmtownsend-smartrelease-demo-mylibc = { version = "^0.1.1", path = "./crates/mylibc" }
