[package]
name = "brooksmtownsend-smartrelease-demo-myliba"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "library a for a testing of smart-release"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brooksmtownsend-smartrelease-demo-mylibb = { workspace = true }
